# edoras_core

./: CMakeLists.txt  CMakeLists_OLD.txt  README.md  edoras_core.cmake.in
include/edoras_core/: conversion_private.h  debug_helpers.h  interface.h  message_parsing_impl.hpp  message_reading_impl.hpp  types.h
src/: conversion_private.cpp  debug_helpers.cpp  interface.cpp  test_conversion.cpp
tests/: test_reading.cpp  test_setting_header.cpp  test_setting_joint_state.cpp
